--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "fastify": "^5.2.1",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "zod": "^3.24.2"
   }
 }
